--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-typeahead": "^6.4.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
